fix contrast issues

--- a/src/components/atoms/lineHeading.module.scss
+++ b/src/components/atoms/lineHeading.module.scss
@@ -2,7 +2,7 @@
 
 .heading {
 	display: flex;
-	color: $ts-red;
+	color: $ts-red-on-white;
 	text-transform: uppercase;
 	letter-spacing: 0.1em;
 	&:after {
