--- a/src/components/organisms/navigation.module.scss
+++ b/src/components/organisms/navigation.module.scss
@@ -65,7 +65,7 @@
 			&,
 			.icon,
 			.iconDisclosure {
-				color: $ts-red;
+				color: $ts-red-on-white;
 			}
 		}
 	}
