--- a/src/containers/blog/detail.module.scss
+++ b/src/containers/blog/detail.module.scss
@@ -39,7 +39,7 @@
 	font-size: 16px;
 	font-weight: 600;
 	line-height: 19px;
-	color: $ts-red;
+	color: $ts-red-on-white;
 }
 
 .teaser {
