--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -51,7 +51,9 @@ $ts-darkened-topicH: #03013e;
 // https://app.contrast-finder.org/result.html?foreground=ff224a&background=white&ratio=4.5&isBackgroundTested=false&algo=Rgb&lang=en
 $ts-red-on-white: #e91742;
 // https://app.contrast-finder.org/result.html?foreground=White&background=%23ff224a&ratio=4.5&isBackgroundTested=true&algo=Rgb&lang=en
-$ts-red-under-white: #EE031D;
+$ts-red-under-white: #ee031d;
+// https://app.contrast-finder.org/result.html?foreground=%236b7680&background=%23efebeb&ratio=4.5&isBackgroundTested=false&algo=Rgb&lang=en
+$ts-midTone-on-cream: #6b7680;
 
 $ts-shadow-small-default: 0px 4px 10px rgba(0, 0, 0, 0.15);
 $ts-shadow-small-hover: 0px 4px 16px rgba(0, 0, 0, 0.3);
